--- a/config.json
+++ b/config.json
@@ -21,7 +21,7 @@
   //"base" or "residual". The paper's results are with "residual" (Network's ouput is added to naive upsampling), "base" uses ConvTranspose3d instead.
   "res3d_up_method": "resize",
   //method to upsample temporally to use as input add residual to. "resize"-linear/cubic resize, "duplicate"-duplicates frames, "zero_gap"-adds empty frame/s after each real one.
-  "num_epochs": "not an int",
+  "num_epochs": 5,
   "fine_tuning_epochs_factor": 2,
   //factor to divide "num_epochs" by when fine-tuning. Note: divides by this factor for EACH fine-tuning iteration.
   "num_iter_per_epoch": 10,
@@ -50,15 +50,18 @@
 		  "crop_size_temporal": 16,
 		  "loss_mask_temporal": 2
 		},
-		"spatial_resize_options": [1.0, 0.9, 0.81, 0.73, 0.65, 0.59, 0.53, 0.47, 0.43, 0.38, 0.34, 0.31, 0.28, 0.25] ,
-		"temporal_jump_options": [1, 2, 3, 4, 5],
+		"spatial_resize_options": [1.0],
+        //0.9, 0.81, 0.73, 0.65, 0.59, 0.53, 0.47, 0.43, 0.38, 0.34, 0.31, 0.28, 0.25] ,
+		"temporal_jump_options": [1],
+        //2, 3, 4, 5],
 		//Resizes for creating additional HR training examples.
         "within": {
 		//Parameters for "within dimension" training examples. See paper.
 		  "probability": 0.4,
           "flip_prob": 0.33,
 		  "rotation_prob": 0.5,
-		  "z_flip_prob": 0.33
+		  "z_flip_prob": 0.33,
+          "tps_prob": 1
         },
         "across": {
 		//Parameters for "across dimension" training examples. See paper.
@@ -68,8 +71,9 @@
 		  "new_z_sample_range": [1, 2],
 		  "flip_prob": 0.33,
 		  "rotation_prob": 0.5,
-		  "new_z_flip_prob": 0.33
+		  "new_z_flip_prob": 0.33,
 		  //rotation and flip should be only in directions that are ok
+          "tps_prob": 1
         },
         "shift": {
 		//Parameters for shifted training examples. See paper.
@@ -82,7 +86,8 @@
 		  "flip_prob": 0.3,
 		  "rotation_prob": 0.5,
 		  "z_flip_prob": 0.0,
-		  "valid": true
+		  "valid": true,
+          "tps_prob": 1
         }
       },
 	  "eval_params": {
